# cardinal-chains

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  levels.yml  main.c
go/: Makefile  go.mod  main.go
go/game/: game.go  game_test.go
go/gameloop/: loop.go
go/input/: input.go  input_test.go
go/level/: level.go  level_test.go
go/levelloader/: loader.go  loader_test.go
go/logger/: logger.go
go/render/: render.go  render_test.go
scripts/: install-deps.sh
src/: game.c  game.h  game_loop.c  game_loop.h  input.c  input.h  level.c  level.h  level_loader.c  level_loader.h  main.c  render.c  render.h
